# pty-sharp

./: AUTHORS  COPYING  Makefile.am  README  autogen.sh  configure.ac  pty-sharp.pc.in
gnome-pty-helper/: autogen.sh  config.h.in
pty/: AssemblyInfo.cs  Makefile.am  PseudoTerminal.cs  pty-sharp.snk  sample.cs
src/: Makefile.am  pty.c  pty.h
